--- a/app.json
+++ b/app.json
@@ -19,10 +19,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "googleServicesFile": "./google-services.json",
+      "package": "com.bahade1233.TheSmartHelmet"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "eaa6459b-f3c8-45f4-92bf-a22a3ef16d08"
+      }
     }
   }
 }
